[metadata]
name = 3scale-api
version = 0.35.2
description = 3scale API python client
author = Peter Stanko
author_email = stanko@mail.muni.cz
maintainer = Matej Dujava
maintainer_email = mdujava@redhat.com
url = https://github.com/3scale-qe/3scale-api-python
license = Apache-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Utilities
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    backoff

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    coverage
    flake8
    mypy
    pylint
    pytest
    python-dotenv
    responses
docs = sphinx

[flake8]
max-line-length = 120
ignore = E203,W503

[mypy]
ignore_missing_imports = True
check_untyped_defs = true
local_partial_types = true
